--- a/posts/2025-11-17-food-web-measurement/2025-11-18.bib
+++ b/posts/2025-11-17-food-web-measurement/2025-11-18.bib
@@ -8,3 +8,25 @@
   year={2005},
   publisher={National Academy of Sciences}
 }
+
+@article{allesina2011predicting,
+  title={Predicting trophic relations in ecological networks: a test of the allometric diet breadth model},
+  author={Allesina, Stefano},
+  journal={Journal of Theoretical Biology},
+  volume={279},
+  number={1},
+  pages={161--168},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{petchey2008size,
+  title={Size, foraging, and food web structure},
+  author={Petchey, Owen L and Beckerman, Andrew P and Riede, Jens O and Warren, Philip H},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={105},
+  number={11},
+  pages={4191--4196},
+  year={2008},
+  publisher={National Academy of Sciences}
+}
